--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REACT_APP_MONGODB_URL=mongodb+srv://dbAdmin:6jbYPn9ifGI3bXgz@portfolio.2zzvc7l.mongodb.net/?retryWrites=true&w=majority
+REACT_APP_MONGODB_URL=mongodb+srv://dbAdmin:6jbYPn9ifGI3bXgz@portfolio.2zzvc7l.mongodb.net/portfolio?retryWrites=true&w=majority
 REACT_APP_EMAIL_USERNAME=webkagancoskun@gmail.com
 REACT_APP_EMAIL_PASSWORD=hyfmnjqrjvmvodad
+NEXT_PUBLIC_JWT_SECRET=secret
