--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "jose": "^4.14.4",
     "mongoose": "^7.4.3",
     "next": "13.4.13",
     "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "universal-cookie": "^6.1.0"
   }
 }
