change the mongodb variable

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ REACT_APP_MONGODB_URL=mongodb+srv://dbAdmin:6jbYPn9ifGI3bXgz@portfolio.2zzvc7l.m
 REACT_APP_EMAIL_USERNAME=webkagancoskun@gmail.com
 REACT_APP_EMAIL_PASSWORD=hyfmnjqrjvmvodad
 NEXT_PUBLIC_JWT_SECRET=dc1f9ce1-c20c-4458-8c7c-f532a7fe523d
-MONGODB_URI=mongodb+srv://vercel-admin-user:E9lZmDO4kH9MDto8@portfolio.2zzvc7l.mongodb.net/portfolio?retryWrites=true&w=majority
+NEXT_PUBLIC_MONGODB_URI=mongodb+srv://vercel-admin-user:E9lZmDO4kH9MDto8@portfolio.2zzvc7l.mongodb.net/portfolio?retryWrites=true&w=majority
